2011-01-26  Susanne Moog <typo3@susanne-moog.de>

	* Fixed bug #3523: Rewrite of workspace manual started

2011-01-26 Tolleiv Nietsch <typo3@tolleiv.de>

	* Raised version to 4.5.0

2011-01-26  Marco Bresch <typo3@starfinanz.de>

	* Fixed bug #12534: Positioning of toolbar in IE6 (Thanks to Markus Antecki)

2011-01-25  Sonja Scholz <ss@cabag.ch>

	* Fixed bug #10636: workspace module not usable in IE6 (Thanks to Markus Antecki)

2011-01-25  Tolleiv Nietsch <typo3@tolleiv.de>

	* Raised version to 4.5.0rc2
	* Fixed bug #12406: Not possible to publish change of IRRE ordering
	* Fixed bug #12464: Slider element is not always visible during the dragging process..

2011-01-24  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #17222: fitToParent calculates wrong height - workspace grid needs 40 pixel offset for render the legend

2011-01-21  Tolleiv Nietsch <typo3@tolleiv.de>

	* Followup to #11539: Split view / initial height calculated right
	* Followup to #11539: Split view / tooltip styling added

2011-01-21  Tolleiv Nietsch <typo3@tolleiv.de>

	* Fixed bug #12448: grid preview links are broken
	* Raised version to 4.5.0rc1
	* Fixed bug #12415: Respect change #17167: Cache ExtDirect::getAPI calls
	* Fixed bug #12308: Workspace non-admin not workspace owner sees icon to swap updated version with Live site
	* Fixed bug #12384: Mount points are not taken into account in element-list
	* Fixed bug #12325: Hide icons that don't work in the current context
	* Fixed bug #11539: Split view

2011-01-20  Susanne Moog <typo3@susanne-moog.de>

	* Fixed bug #12055: Publishing a page does not update the new page tree
	* Fixed bug #12413: Rename extension "list" to "recordlist"
	* Fixed bug #12000: Cache and Favorites submenus shifts when in Workspaces
	* Fixed bug #11574: Workspaces grid: stages should "sit" on one line
	* Fixed bug #12446: Fixed instantiation of UriBuilder (broken since extbase merge)