@@ -1,3 +1,7 @@
+2011-02-16 Tolleiv Nietsch <typo3@tolleiv.de>
+
+	* Fixed bug #13002: singleIndex page much have invalid workspace id
+
 2011-01-26  Susanne Moog <typo3@susanne-moog.de>
 
 	* Fixed bug #3523: Rewrite of workspace manual started
